--- a/styles.css
+++ b/styles.css
@@ -4,26 +4,34 @@ body {
     margin: 0;
     padding: 0;
 }
+
 header {
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
 }
+
 nav {
     background-color: #f4f4f4;
     padding: 10px 20px;
     text-align: center;
 }
+
 nav a {
     margin-right: 20px;
     color: #333;
     text-decoration: none;
 }
+
 .container {
+    text-align: center;
     max-width: 800px;
     margin: 20px auto;
-    padding: 0 20px;
+    padding: 30px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    background: #fff;
 }
 .testimonial {
     margin-bottom: 30px;
@@ -32,10 +40,42 @@ nav a {
     border-radius: 5px;
     background-color: #f9f9f9;
 }
+
 .testimonial p {
     margin: 10px 0;
 }
 
+/* ZONA DE INCIO*/
+
+/* Estilos para la sección de inicio */
+.inicio {
+    background-color: #0B3C5D;
+    color: #FFFFFF;
+    padding: 100px 0;
+    text-align: center;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.inicio-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+/* Estilos para la sección de Nosotros */
+#nosotros {
+    background-color: #FFFFFF;
+    color: #0B3C5D;
+    
+    padding: 20px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+}
+
+/*fin zona de inicio*/
 
 /* ZONA DE EVENTOS */
 
@@ -47,7 +87,8 @@ nav a {
 }
 
 .event-card {
-    width: 45%; /* Ajusta el ancho según sea necesario */
+    width: 45%;
+    /* Ajusta el ancho según sea necesario */
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
@@ -57,7 +98,8 @@ nav a {
 .event-card img {
     width: 100%;
     height: auto;
-    border-bottom: 2px solid #f0f0f0; /* Línea divisoria entre la imagen y la información */
+    border-bottom: 2px solid #f0f0f0;
+    /* Línea divisoria entre la imagen y la información */
 }
 
 .event-info {
@@ -78,3 +120,101 @@ nav a {
 
 
 /* FIN ZONA EVENTOS */
+
+/*Registros */
+/* Estilos para el formulario de registro */
+.registro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.form-container {
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.options {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 5px 10px;
+    border-radius: 5px;
+    color: #0B3C5D;
+}
+
+button.active {
+    background-color: #FFD166;
+    color: #0B3C5D;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #D3D3D3;
+    border-radius: 5px;
+}
+
+button[type="submit"] {
+    background-color: #FFD166;
+    color: #0B3C5D;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.image-container {
+    margin-left: 20px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+/* Tu CSS existente permanece igual */
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.form-container form {
+    width: 90%;
+    max-width: 300px;
+    /* Cambia el ancho máximo según tu preferencia */
+    height: 450px;
+    text-align: left;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container img {
+    width: 100%;
+    max-width: 335px;
+    /* Igual que el formulario */
+    height: 535px;
+    border-radius: 10px;
+}
