--- a/Contacto/styles.css
+++ b/Contacto/styles.css
@@ -114,39 +114,69 @@ nav {
     border-radius: 100%;
 }
 
-.content {
+/*----*/
+.wrapper{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-    padding: 2rem;
-    /* Añade un padding alrededor del contenido dentro de .content */
-}
+    max-width: 1200px;
+    position: relative;
+    padding-left: 100px;
+    padding-top: 100px;
+  }
+  .wrapper i{
+    top: 50%;
+    height: 44px;
+    width: 44px;
+    color: #343F4F;
+    cursor: pointer;
+    font-size: 1.15rem;
+    position: absolute;
+    text-align: center;
+    line-height: 44px;
+    background: #fff;
+    border-radius: 50%;
+    transform: translateY(0%);
+    transition: transform 0.1s linear;
+  }
+  .wrapper i:active{
+    transform: translateY(-50%) scale(0.9);
+  }
+  .wrapper i:hover{
+    background: #f2f2f2;
+  }
+  .wrapper i:first-child{
+    left: -22px;
+    display: none;
+  }
+  .wrapper i:last-child{
+    right: -22px;
+  }
+  .wrapper .carousel{
+    font-size: 0px;
+    cursor: pointer;
+    overflow: hidden;
+    white-space: nowrap;
+    scroll-behavior: smooth;
+  }
+  .carousel.dragging{
+    cursor: grab;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging img{
+    pointer-events: none;
+  }
+  .carousel img{
+    height: 340px;
+    object-fit: cover;
+    user-select: none;
+    margin-left: 14px;
 
-.content__left {
-    padding-left: 250px; /* Aumenta el padding izquierdo para dar más espacio */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: left;
-}
+  }
+  .carousel img:first-child{
+    margin-left: 0px;
+  }
+/*_----------*/
 
-.content__left img {
-    max-width: 100%;
-}
 
-.content h1 {
-    margin-bottom: 1rem;
-    font-size: 3.5rem; /* Reducir un poco el tamaño del título para dispositivos más pequeños */
-    font-weight: 800;
-    color: var(--white);
-    line-height: 1; /* Ajustar el espaciado entre líneas */
-}
-
-.content h1 span {
-    -webkit-text-stroke: 2px var(--white);
-    -webkit-text-fill-color: transparent;
-}
 
 @media (width < 1200px) {
     .search {
@@ -157,6 +187,7 @@ nav {
         grid-template-columns: 1fr;
     }
 }
+
 
 @media (width < 900px) {
     .nav__links {
@@ -178,21 +209,7 @@ nav {
     }
 }
 
-.content__right {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    color: white;
-    margin-bottom: 2rem;
-    line-height: 1.5rem;
-    padding-left: 80px;
-}
-
 @media (max-width: 900px) {
-    .content__left {
-        padding-left: 0; /* Elimina el padding izquierdo para dispositivos más pequeños */
-    }
-
     .content h1 {
         font-size: 3rem; /* Reducir aún más el tamaño del título en dispositivos muy pequeños */
     }
